# libyacurs

./: .gitignore  AUTHORS  BUGS  ChangeLog  Jenkinsfile  Jenkinsfile.FreeBSD  Jenkinsfile.Linux  Jenkinsfile.NetBSD  Jenkinsfile.OpenBSD  Jenkinsfile.Solaris  Makefile.am  Makefile.boot  NEWS  README  TODO  astylerc  checkall.sh  configure.ac  doxygen.cfg  runcheckall.sh  uncrustifyrc
.circleci/: config.yml
doc/: debug.dox  events.dox  main.dox
include/: Makefile.am  area.h  button.h  checkbox.h  colorparser.h  colors.h  coordinates.h  curs.h  cursex.h  cursorbuf.h  curstr.h  curswin.h  debug.h  dialog.h  dynlabel.h  event.h  eventconnector.h  eventqueue.h  evtqueuestats.h  filedialog.h  fileloaddialog.h  filesavedialog.h  focusgroup.h  focusmanager.h  gettext.h  gettext.h.gch  hotkey.h  hpack.h  hrule.h  input.h  inputbox.h  label.h  libyacurscfg.h.in  lineobject.h  listbox.h  lockscreen.h  margin.h  messagebox.h  messagebox2.h  messagebox3.h  (+27 more)
m4/: ax_with_curses.m4
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.po  de_CH.po  de_DE.po  en@boldquot.po  en@quot.po  en_GB.po  en_US.po  libyacurs.pot
scripts/: checkall.sh  runcheckall.sh
src/: Makefile.am  area.cc  button.cc  checkbox.cc  colorparser.cc  colors.cc  coordinates.cc  curs.cc  cursex.cc  cursorbuf.cc  curstr.cc  curswin.cc  debug.cc  dialog.cc  dynlabel.cc  event.cc  eventconnector.cc  eventqueue.cc  evtconnbase.cc  evtconnfct1.cc  evtqueuestats.cc  filedialog.cc  fileloaddialog.cc  filesavedialog.cc  focusgroup.cc  focusmanager.cc  hotkey.cc  hpack.cc  hrule.cc  input.cc  inputbox.cc  label.cc  lineobject.cc  listbox.cc  lockscreen.cc  margin.cc  messagebox.cc  messagebox2.cc  messagebox3.cc  pack.cc  (+21 more)
tests/: Makefile.am  app1.cc  app2.cc  area.cc  basic1.cc  basic2.cc  checkbox1.cc  colorparser.cc  coordinates.cc  cursinit.cc  cursorbuf1.cc  curswin1.cc  curswin2.cc  dialog1.cc  dynlabel1.cc  dynlabel2.cc  eventconnector1.cc  eventqueue1.cc  eventqueue2.cc  eventqueue3.cc  eventqueue4.cc  eventqueue5.cc  eventqueue6.cc  eventqueue7.cc  eventqueue8.cc  eventqueue9.cc  filedialog1.cc  focus1.cc  inputbox1.cc  listbox1.cc  listbox2.cc  lockscreen1.cc  margin.cc  messagebox1.cc  pack1.cc  pack2.cc  pack3.cc  pack4.cc  pack5.cc  pack6.cc  (+25 more)
tests/basic/: Makefile.am  area.cc  colorparser.cc  coordinates.cc  cursorbuf1.cc  eventconnector1.cc  eventqueue1.cc  eventqueue2.cc  eventqueue3.cc  eventqueue4.cc  eventqueue5.cc  eventqueue6.cc  eventqueue7.cc  eventqueue8.cc  eventqueue9.cc  margin.cc
tests/preloadlib/: Makefile.am  testpreload.cc
tests/ui-interactive/: Makefile.am  app1.cc  checkbox1.cc  dialog1.cc  filedialog1.cc  filedialog2.cc  filedialog3.cc  focus1.cc  input1.cc  inputbox1.cc  listbox1.cc  listbox2.cc  lockscreen1.cc  messagebox1.cc  messagebox2.cc  messagebox3.cc  packremove.cc  radiobox1.cc  resize3.cc  resize4.cc  resize5.cc
tests/ui-non-interactive/: Makefile.am  basic1.cc  basic2.cc  cursinit.cc  cursorbuf1.cc  curswin1.cc  curswin2.cc  curswin3.cc  dynlabel1.cc  dynlabel2.cc  hrule1.cc  listbox1.cc  pack1.cc  pack2.cc  pack3.cc  pack4.cc  pack5.cc  pack6.cc  pack7.cc  pack8.cc  pack9.cc  packresize1.cc  resize1.cc  resize2.cc  vrule1.cc  widget1.cc  widget2.cc  widget3.cc
