# $Id$

noinst_HEADERS = coordinates.h cursex.h curs.h eventconnector.h		\
    event.h eventqueue.h lineobject.h margin.h mycurses.h pack.h	\
    realizeable.h area.h windowbase.h statusline.h vpack.h		\
    widgetbase.h window.h lockscreen.h yacurs.h hpack.h label.h dynlabel.h size.h	\
    widget.h focusgroup.h focusmanager.h button.h colors.h input.h	\
    listbox.h yacurstypes.h dialog.h messagebox.h messagebox2.h		\
   inputbox.h filedialog.h checkbox.h radiobox.h unlockdialog.h unlockdiadefault.h evtqueuestats.h
