# $Id$

lib_LTLIBRARIES = libyacurs.la
libyacurs_la_CPPFLAGS = -I$(top_srcdir)/include
libyacurs_la_SOURCES = coordinates.cc size.cc margin.cc area.cc		\
  event.cc eventconnector.cc eventqueue.cc evtqueuestats.cc curs.cc realizeable.cc	\
  statusline.cc windowbase.cc window.cc lockscreen.cc lineobject.cc	\
  widgetbase.cc pack.cc vpack.cc hpack.cc widget.cc label.cc		\
  dynlabel.cc cursex.cc colors.cc focusgroup.cc focusmanager.cc		\
  button.cc input.cc dialog.cc messagebox.cc messagebox2.cc		\
  inputbox.cc filedialog.cc checkbox.cc radiobox.cc unlockdialog.cc	\
 unlockdiadefault.cc
